publish zero package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
+        "RMRF",
         "Sudoo",
         "WMXPY",
         "codecov",
         "docz",
+        "onepunch",
         "triforce",
         "tshook"
     ],
