--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@one-punch/react",
-  "version": "0.0.1",
+  "name": "one-punch",
+  "version": "0.0.0",
   "description": ":maple_leaf: One punch form React",
-  "main": "index.js",
   "directories": {
     "doc": "docs"
   },
@@ -20,14 +19,14 @@
   },
   "homepage": "https://github.com/SudoDotDog/One-Punch-React#readme",
   "devDependencies": {
+    "@sudoo/bark": "^2.6.4",
+    "@sudoo/io": "^1.6.0",
+    "@sudoo/mock": "^1.2.0",
     "@sudoo/react-force": "^1.5.0",
     "@sudoo/react-force-dev": "^1.5.0",
     "@sudoo/triforce": "^1.6.0",
-    "@types/jss": "^9.5.8",
     "docz": "^1.2.0",
-    "docz-theme-default": "^1.2.0",
-    "jss": "^10.0.0-alpha.16",
-    "jss-preset-default": "^10.0.0-alpha.16"
+    "docz-theme-default": "^1.2.0"
   },
   "nyc": {
     "extension": [
@@ -49,5 +48,8 @@
       "./test/mock.ts"
     ],
     "sourceMap": true
+  },
+  "dependencies": {
+    "@sudoo/io": "^1.6.0"
   }
 }
