--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     ],
     "report-dir": "coverage",
     "require": [
-      "./test/tshook.js",
-      "./test/mock.ts"
+      "./test/tshook.js"
     ],
     "sourceMap": true
   },
