--- a/typescript/tsconfig.build.json
+++ b/typescript/tsconfig.build.json
@@ -2,6 +2,7 @@
     "compileOnSave": false,
     "compilerOptions": {
         "alwaysStrict": true,
+        "declaration": true,
         "downlevelIteration": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
