--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "WMXPY",
         "codecov",
         "docz",
+        "downlevel",
         "jsdom",
         "onepunch",
         "redoable",
